--- a/public/css/style-turquoise.css
+++ b/public/css/style-turquoise.css
@@ -27,11 +27,15 @@ h6,
 .h4,
 .h5,
 .h6 {
-  font-weight: 300;
+  font-weight: 800;
 }
 b,
 strong {
   font-weight: 600;
+}
+.calendar {
+  color: #000;
+
 }
 hr {
   border-top: 1px solid #b6b6b6;
@@ -201,8 +205,8 @@ section {
 .center-vertical .center-vertical-box {
   display: table-cell;
   vertical-align: middle;
-  margin-top: 0;
-  margin-bottom: 0;
+  margin-top: 3;
+  margin-bottom: 5;
   float: none;
   z-index: 60;
   height: inherit;
@@ -1016,7 +1020,7 @@ blockquote,
 ==============================*/
 .footer-1 {
   background-color: #1d2023;
-  padding: 80px 0 70px 0;
+  padding: 50px 50px 70px 0;
   color: #b6b6b6;
   overflow: visible;
 }
@@ -1312,7 +1316,7 @@ blockquote,
 /*-----  End of Slider  ------*/
 .parallax-container {
   position: relative;
-  overflow: hidden;
+  overflow: scroll;
   height: 700px;
 }
 .parallax {
