--- a/public/css/style-turquoise.css
+++ b/public/css/style-turquoise.css
@@ -24,7 +24,6 @@ h6,
 .h1,
 .h2,
 .h3,
-.h4,
 .h5,
 .h6 {
   font-weight: 800;
@@ -32,6 +31,13 @@ h6,
 b,
 strong {
   font-weight: 600;
+}
+
+h4 {
+font-family: 'Bitter', serif;
+font-style: italic;
+font-size: 35px;
+
 }
 .calendar {
   color: #000;
