--- a/public/css/style-turquoise.css
+++ b/public/css/style-turquoise.css
@@ -34,11 +34,17 @@ strong {
 }
 
 h4 {
-font-family: 'Bitter', serif;
-font-style: italic;
+font-family: 'Yanone Kaffeesatz', sans-serif;
+/*font-style: italic;*/
 font-size: 35px;
-
+color: #F8F9F9;
 }
+
+.card-body{
+  font-family: 'Yanone Kaffeesatz', sans-serif;
+  font-size: 20px;
+}
+
 .calendar {
   color: #000;
 
