--- a/public/css/style-turquoise.css
+++ b/public/css/style-turquoise.css
@@ -47,7 +47,12 @@ color: #F8F9F9;
 
 .calendar {
   color: #000;
+}
 
+.carousel-card {
+  height: 230px;
+  width: 75%;
+  margin: auto;
 }
 hr {
   border-top: 1px solid #b6b6b6;
